--- a/submission/views/home.html
+++ b/submission/views/home.html
@@ -11,8 +11,7 @@
 
     <style>
         #photo {
-            height: 350px;
-            width: auto;
+            max-width: 40%;
         }
     </style>
 </head>
