--- a/submission/views/projects.html
+++ b/submission/views/projects.html
@@ -11,9 +11,12 @@
     <style>
         #carousel {
             padding: 25px;
+            max-width: 100%;
+            max-height: 400px;
         }
         .carousel-inner {
-            width: 50%;
+            height: 400px;
+            width: auto;
             background-color: #90b9df;
             margin: auto;
         }
@@ -21,8 +24,9 @@
             padding-bottom: 30px;
         }
         .carousel-inner img {
-            max-height: 400px;
-            object-fit: contain;
+            height: 400px;
+            max-width: 100%;
+            object-fit:contain;
             margin: auto;
             background-color: #d3e3f2;
         }
@@ -57,21 +61,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../resources/img/candyland.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>Candyland</h5>
               <p>A digital recreation of the classic board game Candyland. Written in C++ and run in the terminal, players had to manage their candies, stamina, and gold in a race to the finish. This recreation was able to support up to 8 players.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../resources/img/icon.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>Project Turtle</h5>
               <p>A collaborative project mixing creative writing, visual art, and game design. "Project Turtle" is the codename given to this in-progress video game demo.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../resources/img/deiro.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>The Deiro Mythos</h5>
               <p>Semi-inspired by DnD and the Cthulhu Mythos, this project started as a short story. To keep up with the expanding world, a website storing the world information and a character "bible" is being created.</p>
             </div>
