--- a/submission/views/home.html
+++ b/submission/views/home.html
@@ -10,8 +10,15 @@
     <link rel="stylesheet" href="../resources/css/style.css">
 
     <style>
-        #photo {
-            max-width: 40%;
+        .wrapper {
+            display: grid;
+        }
+        @media screen and (min-width: 600px) {
+            .wrapper {
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+                column-gap: 5%;
+            }
         }
     </style>
 </head>
