add wrapper class

--- a/submission/views/home.html
+++ b/submission/views/home.html
@@ -33,7 +33,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container">
+    <div class="container wrapper">
         <!-- Image Section -->
         <img id="photo" src="../resources/img/portrait.jpg" alt="Image">
 
